Break from master branch

--- a/book.html
+++ b/book.html
@@ -744,16 +744,16 @@ asciidoc.install();
 <div class="content">
 <img src="assets/images/exercise-application/start.png" alt="assets/images/exercise-application/start.png" width="700" />
 </div>
-<div class="title">Figure 1. The Starting Point (9433)</div>
+<div class="title">Figure 1. The Starting Point</div>
 </div>
 <div class="paragraph"><p>The goal of the exercise is to echo the contents of the text field as the user types. The solution is shown below.</p></div>
 <div class="imageblock" id="9575">
 <div class="content">
 <img src="assets/images/exercise-application/solution.png" alt="assets/images/exercise-application/solution.png" width="700" />
 </div>
-<div class="title">Figure 2. The Solution (9575)</div>
+<div class="title">Figure 2. The Solution</div>
 </div>
-<div class="paragraph"><p>With that simple example in mind, let&#8217;s look at the components in the Exercise application!</p></div>
+<div class="paragraph"><p>With that simple example in mind, let&#8217;s look at the components in the Exercise application.</p></div>
 </div>
 </div>
 <div class="sect2">
@@ -772,7 +772,7 @@ asciidoc.install();
 <div class="paragraph"><p>The main content of the exercise is displayed in the <code>work-area</code> div. Depending on the value of <code>solutionVisible</code>, either the Solution component or the Start component is displayed.</p></div>
 <div class="paragraph"><p>Finally, the component is exported as the default export.</p></div>
 <div class="exampleblock" id="9447">
-<div class="title">Example 1. The App Component (9447)</div>
+<div class="title">Example 1. The App Component</div>
 <div class="content">
 <div class="listingblock">
 <div class="content">
@@ -829,7 +829,7 @@ export default App</code></pre>
 <div class="paragraph"><p>When the button in the component is clicked, the <code>onClick</code> prop is executed, which will toggle the visibility of the solution in the parent component.</p></div>
 <div class="paragraph"><p>When the user clicks on the span in the Instructions component&#8217;s footer, React invokes the <code>onClick</code> callback which toggles the value of <code>solutionVisible</code>, which updates the visibility of the solution.</p></div>
 <div class="exampleblock" id="9915">
-<div class="title">Example 2. The Instructions Component (9915)</div>
+<div class="title">Example 2. The Instructions Component</div>
 <div class="content">
 <div class="listingblock">
 <div class="content">
@@ -883,7 +883,7 @@ export default Instructions</code></pre>
 <h4 id="9545">The <code>InstructionsIcon</code> Component  (9545)</h4>
 <div class="paragraph"><p>The InstructionsIcon component displays a Plus icon using the FaPlus icon from the react-icons/fa library. The icon&#8217;s class name is specified with the <code>className</code> prop.</p></div>
 <div class="exampleblock" id="9906">
-<div class="title">Example 3. The InstructionsIcon Component (9906)</div>
+<div class="title">Example 3. The InstructionsIcon Component</div>
 <div class="content">
 <div class="listingblock">
 <div class="content">
@@ -906,7 +906,7 @@ export default InstructionsIcon</code></pre>
 <div class="paragraph"><p>The InstructionsText component displays the instructions for the exercise.</p></div>
 <div class="paragraph"><p>The instructions are stored in an array and are displayed using the <code>map</code> function to create a list of <code>li</code> elements, which fade in when the page is displayed. Each element of the instructions array is displayed as a bullet point in the list. Each li element has the class circle-li to style it as a bullet point.</p></div>
 <div class="exampleblock" id="9979">
-<div class="title">Example 4. The InstructionsText Component (9979)</div>
+<div class="title">Example 4. The InstructionsText Component</div>
 <div class="content">
 <div class="listingblock">
 <div class="content">
@@ -939,7 +939,7 @@ export default InstructionsText</code></pre>
 <div class="paragraph"><p>The Start component is the starting point for the exercise. The content of the Start component varies for each exercise.</p></div>
 <div class="paragraph"><p>The simple component listed below renders a text input.</p></div>
 <div class="exampleblock" id="9621">
-<div class="title">Example 5. The Start Component (9621)</div>
+<div class="title">Example 5. The Start Component</div>
 <div class="content">
 <div class="listingblock">
 <div class="content">
@@ -956,7 +956,7 @@ export default Start</code></pre>
 <h4 id="9288">The <code>Solution</code> Component  (9288)</h4>
 <div class="paragraph"><p>The Solution component, which also varies for each exercise, is the implementation of the exercise. For example, the Solution component for the preceeding Start component is listed below.</p></div>
 <div class="exampleblock" id="9773">
-<div class="title">Example 6. The Solution Component (9773)</div>
+<div class="title">Example 6. The Solution Component</div>
 <div class="content">
 <div class="listingblock">
 <div class="content">
@@ -996,7 +996,7 @@ export default Solution</code></pre>
 <div id="footer">
 <div id="footer-text">
 Last updated
- 2023-02-12 14:48:01 MST
+ 2023-03-16 13:56:22 MDT
 </div>
 </div>
 </body>
